# metacircular

./: .#.dir-locals.el  .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  README.md  meta.c
common/: create_test.cmake
src/: CMakeLists.txt
src/base/: CMakeLists.txt
src/base/include/: base.h
src/base/src/: base.c  base_common.h  numbers.c  primitives.c  stringify.c
src/base/test/: base_test.c
src/environment/: CMakeLists.txt
src/environment/include/: environment.h
src/environment/src/: environment.c
src/environment/test/: environment_test.c
src/evaluator/: CMakeLists.txt
src/evaluator/include/: evaluator.h
src/evaluator/src/: evaluator.c
src/evaluator/test/: evaluator_test.c
src/input/: CMakeLists.txt
src/input/include/: input.h
src/input/src/: input.c
src/input/test/: input_test.c
src/object/: CMakeLists.txt
src/object/include/: object.h
src/object/src/: object.c
src/object/test/: object_test.c
src/repl/: CMakeLists.txt
src/repl/src/: config.scm  repl.c
src/test_helpers/: CMakeLists.txt
src/test_helpers/include/: test_helpers.h
src/test_helpers/src/: test_helpers.c
